--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
-.myName {
-  font-size: 50px;
-}
+/*.myName {*/
+  /*font-size: 50px;*/
+/*}*/
 
 .logo, .myName {
   position: relative;
+}
+
+.topBlock {
+  border-bottom: solid steelblue 8px;
 }
