--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,6 +32,10 @@ html, body {
   .myName {
     width: 90%;
   }
+  .project {
+    width: 33%;
+  }
+
 }
 
 @media screen and (min-width: 1000px) {
