--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,9 +14,15 @@ html, body {
 }
 
 @media screen and (max-width: 412px) {
+  .backImg {
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .linkName {
+    font-size: 2em;
+  }
 }
 
 @media screen {
