--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,9 @@
 html, body {
   width: 100%;
   height: 100%;
-/*  display: flex;*/
 }
 
-.container, .topBlock, .bottomLinks, .navSmall {
+.container, .topBlock, .image, .bottomLinks, .navSmall {
   display: flex;
   flex-wrap: wrap;
 }
@@ -13,24 +12,21 @@ html, body {
   width: 100%;
 }
 
-@media screen and (max-width: 412px) {
-  .backImg {
-    height: auto;
+@media screen and (max-width: 549px) {
+  .name {
+    font-size: 2.1em;
   }
-}
-
-@media screen and (max-width: 768px) {
-  .linkName {
-    font-size: 2em;
+  .status {
+    font-size: 1.2em;
   }
-}
-
-@media screen {
+  .resume, .fildS {
+    display: none;
+  }
   .logo {
-    width: 10%;
+    width: 20%;
   }
   .myName {
-    width: 89%;
+    width: 79%;
   }
   .project {
     width: 30%;
@@ -40,9 +36,45 @@ html, body {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 550px) {
+  .logo {
+    width: 10%;
+  }
+  .myName {
+    width: 89%;
+  }
+  .me {
+    width: 40%;
+  }
+  .resume {
+    width: 56.5%;
+  }
+  .project {
+    width: 30%;
+  }
+  .fildS {
+    width: 3.5%
+  }
+  .fild {
+    width: 5%;
+  }
+  .work {
+    width: 35%;
+  }
+  .sentence {
+    width: 63%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .linkName {
+    font-size: 1.8em;
+  }
+}
+
+@media screen and (min-width: 950px) {
   .container {
-    width: 1000px;
+    width: 950px;
     margin-right: auto;
     margin-left: auto;
   }
