--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
   margin-top: -0.4em;
   margin-bottom: -20px;
   text-align: right;
-  font-size: 1.6em;
+  font-size: 2.2em;
   font-style: italic;
-  color: #627777;
+  color: #4e5f5f;
 }
