--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*Common*/
 body {
   margin: 0;
 }
@@ -6,7 +7,10 @@ body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
-.logo, .myName {
+
+/*Header: logo, name and status*/
+.logo,
+.title {
   position: relative;
 }
 
@@ -14,7 +18,8 @@ body {
   margin-top: 2em;
 }
 
-.name, .work {
+.name,
+.work {
   font-weight: unset;
 }
 
@@ -28,44 +33,50 @@ body {
   margin: 0;
 }
 
-.imgLogo {
+.img-logo {
   width: 100%;
   padding-top: 10px;
 }
 
-.myName {
+.title {
   text-align: right;
   text-transform: uppercase;
   color: darkslategrey;
 }
 
-.topBlock {
+.top {
   border-bottom: solid steelblue 8px;
   margin-bottom: 1.3em;
   margin-top: -1.2em;
 }
 
-.linkName {
+
+/*Block of my photo and photo background*/
+.photo,
+.img-code {
+  height: 100%;
+}
+
+.project,
+.center {
+  text-align: center;
+  display: inline-block;
+  letter-spacing: 0;
+}
+
+
+/*Bottom block: images and links*/
+.link-name {
   text-decoration: none;
   color: #2d3c49;
   text-transform: uppercase;
   font-size: 2.5em;
 }
 
-.meImg, .backImg {
-  height: 100%;
-}
-
-.listWorks {
+.works {
   padding: 0px;
   letter-spacing: -10px;
   margin: 0;
-}
-
-.project, .center {
-  text-align: center;
-  display: inline-block;
-  letter-spacing: 0;
 }
 
 .work {
