--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,15 @@
-html, body {
+/*TODO: preparation for use flexible blocks*/
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
-.container, .topBlock, .image, .bottomLinks, .navSmall {
+.container,
+.top,
+.img-block,
+.links,
+.navSmall {
   display: flex;
   flex-wrap: wrap;
 }
@@ -12,8 +18,9 @@ html, body {
   width: 100%;
 }
 
-@media screen and (max-width: 349px) {
 
+/*TODO: settings for screen less 350px at width*/
+@media screen and (max-width: 349px) {
   .name {
     font-size: 1.4em;
   }
@@ -22,7 +29,7 @@ html, body {
     font-size: 1em;
   }
 
-  .resume {
+  .picture {
     width: 100%;
     height: 30%;
   }
@@ -31,7 +38,7 @@ html, body {
     width: 20%;
   }
 
-  .myName {
+  .title {
     width: 79%;
     padding-top: 0.5em;
   }
@@ -48,7 +55,7 @@ html, body {
     width: 30%;
   }
 
-  .linkName {
+  .link-name {
     font-size: 1.4em;
   }
 
@@ -56,11 +63,11 @@ html, body {
     font-size: 1.3em;
     padding-right: 0.5em;
   }
-
 }
 
-@media screen and (max-width: 549px) and (min-width: 350px) {
 
+/*TODO: settings for screen more 349px and less 550px at width*/
+@media screen and (max-width: 549px) and (min-width: 350px) {
   .name {
     font-size: 2.1em;
   }
@@ -69,7 +76,7 @@ html, body {
     font-size: 1.2em;
   }
 
-  .resume {
+  .picture {
     width: 100%;
     height: 30%;
   }
@@ -78,7 +85,7 @@ html, body {
     width: 20%;
   }
 
-  .myName {
+  .title {
     width: 79%;
   }
 
@@ -94,7 +101,7 @@ html, body {
     width: 30%;
   }
 
-  .linkName {
+  .link-name {
     font-size: 1.8em;
   }
 
@@ -102,25 +109,25 @@ html, body {
     padding-right: 0.5em;
     font-size: 1.8em;
   }
-
 }
 
-@media screen and (min-width: 550px) {
 
+/*TODO: settings for screen more 549px at width*/
+@media screen and (min-width: 550px) {
   .logo {
     width: 10%;
   }
 
-  .myName {
+  .title {
     width: 89%;
   }
 
   .me {
     width: 40%;
-    padding-right: 3.5%
+    padding-right: 3.5%;
   }
 
-  .resume {
+  .picture {
     width: 56.5%;
   }
 
@@ -129,47 +136,43 @@ html, body {
   }
 
   .work {
-    width: 35%;
+    width: 23%;
   }
 
   .sentence {
-    width: 63%;
+    width: 75%;
   }
-
 }
 
-@media screen and (max-width: 768px) and (min-width: 549px) {
 
+/*TODO: settings for screen more 548px and less 769px at width*/
+@media screen and (max-width: 768px) and (min-width: 549px) {
   .logo {
     width: 15%;
   }
 
-  .myName {
+  .title {
     width: 84%;
   }
 
   .work {
     width: 100%;
-    margin-top: 1em;
-    margin-bottom: -0.15em;
+    margin: 1em, 0, -0.15em;
   }
 
   .sentence {
     width: 100%;
     text-align: left;
-    padding-left: 0.15em;
-    padding-bottom: 1em;
+    padding: 0, 0, 1em, 0.15em;
     margin: 0;
   }
-
 }
 
-@media screen and (min-width: 950px) {
 
+/*TODO: settings for fixing the layout on 950px at width*/
+@media screen and (min-width: 950px) {
   .container {
     width: 950px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
   }
-
 }
